# HAL-toolchain

./: .gitignore  README.md  configure.py  feather-m0.cmake  size.py  toolchain.cmake  upload.py
arduino-core/: CMakeLists.txt
arduino-link/: CMakeLists.txt  port_reset.py  upload.cmake
arm-gcc-link/: CMakeLists.txt  port_reset.py  upload.cmake
arm-gcc-link/src/: cpp_support.cpp  main.c
platform/feather-m0/: flash_with_bootloader.ld
platform/samd21/hal-core/: Chip.hpp  CoreFunctions.h  DeviceVectors.c  Handler.c  ResetHandler.c  Segments.h  Startup.c
